--- a/index3.html
+++ b/index3.html
@@ -31,7 +31,8 @@
             <a href="#seven" style="color: #B60E62;">- Implementing a Co-designed solution a Global Warming </a><br>
             <a href="#eight" style="color: #B60E62;">- An investigation into KAICYCLE'S service (Part 1)</a><br>
             <a href="#nine" style="color: #B60E62;">- Customer Journey Map Analysis (Part 2)</a><br>
-            <a href="#ten" style="color: #B60E62;">- Finanial literacy Impact (Part 1)</a><br><br>
+            <a href="#ten" style="color: #B60E62;">- Finanial literacy Impact (Part 1)</a><br>
+		     <a href="#eleven" style="color: #B60E62;">- The solution (Part 2)</a><br><br>
 
 
 
